# chatserver-cluster

./: .gitignore  CMakeLists.txt  README.md  logs.md
include/: public.hpp
include/server/: chatserver.hpp  chatserverice.hpp  chatservice.hpp
include/server/MySQLConnectionPool/: CommonConnectionPool.h  Connection.h  public.h
include/server/dbORM/: group.hpp  groupuser.hpp  user.hpp
include/server/model/: friendmodel.hpp  groupmodel.hpp  model.hpp  offlinemessagemodel.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatserverice.cpp  chatservice.cpp  main.cpp
src/server/model/: friendmoel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/testjson/: testjson.cpp
test/testmuduo/: CMakeLists.txt  muduo_server.cpp
